<resources>
    <string name="app_name">软件管理</string>
    <string name="login_success">登录成功</string>
    <string name="connect_success">连接服务器成功</string>
    <string name="disconnect_success">连接断开,正在重连</string>
    <string name="force_office">账号在其他地设备登录</string>
    <string name="sig_expired">用户凭证过期</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="sign_in">登陆</string>
    <string name="sign_in_now">立即登陆</string>
    <string name="sign_out">登出</string>
    <string name="wechat_pay">微信收款</string>
    <string name="alipay">支付宝收款</string>
    <string name="code">号码验证</string>
    <string name="cash">余额查询</string>
    <string name="card">刷卡收款</string>
    <string name="refund">申请退款</string>
    <string name="form_list">门票验证</string>
    <string name="form_water">流水查询</string>
    <string name="data_count">数据统计</string>
    <string name="count">统计</string>
    <string name="device_manage">终端管理</string>
    <string name="receive_money_num">收款金额</string>
    <string name="receive_money">收款</string>
    <string name="receivable_money">应收金额</string>
    <string name="received_money">收款金额</string>
    <string name="back_money">找零金额</string>
    <string name="scan_back_money">扫一扫退款</string>

    <string name="form_detail">订单详情</string>
    <string name="network_error">网络异常，请检查</string>
    <string name="double_press_exit">再按一次退出程序</string>

    <string name="today_format">HH:mm</string>
    <string name="yesterday_format">昨天</string>
    <string name="date_format">yy/MM/dd</string>
    <string name="talk_today_format">HH:mm</string>
    <string name="talk_yesterday_format">昨天 HH:mm</string>
    <string name="talk_date_format">yy-MM-dd HH:mm</string>
    <string name="custom_date_format">yyyy-MM-dd</string>
    <string name="talk_date_month_format">MM-dd HH:mm</string>

    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>

    <string name="print_manage">现场售票</string>
    <string name="order_select">门票验证</string>
    <string name="reserved">预留</string>
    <string name="downloading">正在下载...</string>
    <string name="user_change">会员充值</string>
    <string name="storage">存衣管理</string>


    <string name="prescription">处方</string>
    <string name="search">查询</string>
    <string-array name="nav_titles">
        <item>@string/prescription
        </item>
        <item>@string/search</item>
    </string-array>


    <string name="photo_pick_panel_from_gallery">从相册选取</string>
    <string name="photo_pick_panel_from_camera">相机</string>
    <string name="action_sheet_cancel">取消</string>
</resources>
