<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_receive_money"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.sy.prescription.ReceiveMoneyActivity">

    <include
        android:id="@+id/headerView"
        layout="@layout/header_view" />

    <LinearLayout
        android:id="@+id/llReceiveMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerView"
        android:layout_margin="30dp"
        android:visibility="gone"
        android:background="@drawable/receive_money_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/text_black_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/receive_money_num"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/etMoney"
            style="@style/text_black_42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@null"
            android:text="0.00"
            android:textColor="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llReceiveMoney"
        android:visibility="gone"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/receive_money_bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/text_black_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/receivable_money"
                android:textColor="@color/blue" />

            <EditText
                android:id="@+id/etReceivableMoney"
                style="@style/text_black_28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="0.00"
                android:textColor="@color/blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/receive_money_bg"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/text_black_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/received_money" />

            <EditText
                android:id="@+id/etReceivedMoney"
                style="@style/text_black_28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@null"
                android:layout_marginTop="10dp"
                android:text="0.00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/receive_money_bg"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/text_black_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/back_money" />

            <EditText
                android:id="@+id/etBackMoney"
                style="@style/text_black_28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:text="0.00" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>